package sud_tanj.com.icare;

import android.content.Context;
import android.content.Intent;
import android.content.SharedPreferences;
import android.content.SharedPreferences.OnSharedPreferenceChangeListener;
import android.net.Uri;
import android.view.Window;

import com.bumptech.glide.Glide;
import com.bumptech.glide.load.engine.DiskCacheStrategy;
import com.bumptech.glide.request.RequestOptions;
import com.bumptech.glide.signature.ObjectKey;
import com.crashlytics.android.Crashlytics;
import com.google.android.gms.auth.api.signin.GoogleSignIn;
import com.google.android.gms.auth.api.signin.GoogleSignInClient;
import com.google.android.gms.auth.api.signin.GoogleSignInOptions;
import com.google.firebase.auth.FirebaseAuth;
import com.google.firebase.auth.FirebaseUser;
import com.heinrichreimersoftware.materialdrawer.DrawerActivity;
import com.heinrichreimersoftware.materialdrawer.structure.DrawerItem;
import com.heinrichreimersoftware.materialdrawer.structure.DrawerProfile;
import com.heinrichreimersoftware.materialdrawer.structure.DrawerProfile.OnProfileClickListener;
import com.mikepenz.aboutlibraries.Libs.ActivityStyle;
import com.mikepenz.aboutlibraries.LibsBuilder;
import com.mikepenz.aboutlibraries.ui.LibsSupportFragment;
import com.ncapdevi.fragnav.FragNavController;
import com.orhanobut.logger.AndroidLogAdapter;
import com.orhanobut.logger.Logger;

import net.steamcrafted.materialiconlib.MaterialDrawableBuilder.IconValue;

import org.androidannotations.annotations.AfterViews;
import org.androidannotations.annotations.EActivity;
import org.androidannotations.annotations.Extra;
import org.androidannotations.annotations.WindowFeature;

import io.fabric.sdk.android.Fabric;
import sharefirebasepreferences.crysxd.de.lib.SharedFirebasePreferencesContextWrapper;
import sud_tanj.com.icare.Backend.BackgroundJob.BackgroundDataReceiver;
import sud_tanj.com.icare.Backend.BackgroundJob.BackgroundRunnable;
import sud_tanj.com.icare.Backend.Database.HybridReference;
import sud_tanj.com.icare.Backend.Microcontrollers.BaseMicrocontroller;
import sud_tanj.com.icare.Backend.Microcontrollers.CustomMicrocontroller.LolinESP8266Multi;
import sud_tanj.com.icare.Backend.Preferences.HybridPreferences;
import sud_tanj.com.icare.Backend.Sensors.BuiltInSensor;
import sud_tanj.com.icare.Backend.Utility.SystemStatus;
import sud_tanj.com.icare.Frontend.Animation.LoadingScreen;
import sud_tanj.com.icare.Frontend.Fragment.FragmentBuilder;
import sud_tanj.com.icare.Frontend.Icon.IconBuilder;
import sud_tanj.com.icare.Frontend.Listener.FirebaseProfilePictureListener;
import sud_tanj.com.icare.Frontend.Notification.Notification;
import sud_tanj.com.icare.Frontend.Settings.SettingsFragment;

@EActivity(R.layout.activity_main)
@WindowFeature(Window.FEATURE_NO_TITLE)
public class MainActivity extends DrawerActivity implements OnProfileClickListener,OnFragmentInteractionListener,DrawerItem.OnItemClickListener,OnSharedPreferenceChangeListener {
    private FirebaseUser firebaseUser=FirebaseAuth.getInstance().getCurrentUser();
    @Extra("googleSigninObject")
    GoogleSignInOptions gso;
    private FragNavController.Builder builder;
    private DrawerProfile drawerProfile;
    private BackgroundDataReceiver backgroundDataReceiver=new BackgroundDataReceiver();

    @Override
    protected void attachBaseContext(Context newBase) {
        super.attachBaseContext(new SharedFirebasePreferencesContextWrapper(newBase));
    }

    @Override
    protected void onActivityResult(int requestCode, int resultCode, Intent data) {
        super.onActivityResult(requestCode, resultCode, data);
        FragmentBuilder.getLastFragment().onActivityResult(requestCode,resultCode,data);
    }

    @Override
    protected void onDestroy() {
        super.onDestroy();
        for(int i=0;i<BaseMicrocontroller.getBaseMicrocontrollerList().size();i++){
            BaseMicrocontroller.getBaseMicrocontrollerList().get(i).onDispose();
        }
        SystemStatus.setBackgroundJobCancel(true);
        System.out.println("App done cleanup remaining process! bye!");
    }

    @Override
    public void onBackPressed() {
        super.onBackPressed();
        Notification.notifyUser("Bye!");
        finish();
    }

    @AfterViews
    protected void initActivity(){
        //Init Hybrid Database
        HybridReference.init(this);
        //Init logger
        Logger.addLogAdapter(new AndroidLogAdapter());
        //Init Loading Screen
        LoadingScreen.init(this);
        //Init builtin Sensor
        BuiltInSensor.init(this);
        //Init Microcontroller
        BaseMicrocontroller.init(this);
        //Init Icon Builder
        IconBuilder.init(this);
        //init fragment manager
        FragmentBuilder.init(getIntent().getExtras(),getSupportFragmentManager());
        if(FragmentBuilder.getLastFragment()==null){
          // FragmentBuilder.changeFragment(DataUi_.builder().build());
        } else {
            FragmentBuilder.launchLastFragment();
        }
        //Init Notification
        Notification.init(this);
        //Init Hybrid Preferences
        HybridPreferences.init(this);
        HybridPreferences.getFirebaseInstance().registerOnSharedPreferenceChangeListener(this);
        //Init background job
        BackgroundRunnable.init(this);
        //Tasks.executeInBackground(this,backgroundDataReceiver,backgroundDataReceiver);
        //init Fabric.io
        Fabric.with(this,new Crashlytics());
        LolinESP8266Multi.getInstance();
    }

    @AfterViews
    protected void initNavigationDrawer(){
        drawerProfile=new DrawerProfile()
                .setAvatar(IconBuilder.get(IconValue.CLOUD_OFF_OUTLINE))
                .setBackground(IconBuilder.get(IconValue.HEART_PULSE))
                //.setBackground((BitmapDrawable)getResources().getDrawable(R.drawable.nav_bar_background))
                .setName(firebaseUser.getDisplayName())
                .setDescription(HybridPreferences.getFirebaseInstance().getString(SettingsFragment.AGE_SETTINGS,"")+getString(R.string.profile_age_drawer))
                .setOnProfileClickListener(this);
        addProfile(drawerProfile);
        addItem(
                new DrawerItem()
                        .setImage(IconBuilder.get(IconValue.CLIPBOARD_PULSE))
                        .setTextPrimary(getString(R.string.Health_Data_Menu_Title))
                        .setTextSecondary(getString(R.string.Health_Data_Menu_Description))
                        .setOnItemClickListener(this)
        );
        addItem(
                new DrawerItem()
                        .setImage(IconBuilder.get(IconValue.DEVELOPER_BOARD))
                        .setTextPrimary(getString(R.string.sensor_catalogue_menu_title))
                        .setTextSecondary(getString(R.string.sensor_catalogue_menu_description))
                        .setOnItemClickListener(this)
        );
        addDivider();
        addItem(
                new DrawerItem()
                        .setTextPrimary(getString(R.string.settings_menu_title))
                        .setTextSecondary(getString(R.string.settings_menu_description))
                        .setImage(IconBuilder.get(IconValue.SETTINGS))
                        .setOnItemClickListener(this)
        );
        addItem(
                new DrawerItem()
                        .setTextPrimary(getString(R.string.about_menu_title))
                        .setTextSecondary(getString(R.string.about_menu_descriptioni))
                        .setImage(IconBuilder.get(IconValue.ASSISTANT))
                        .setOnItemClickListener(this)
        );
        addItem(
                new DrawerItem()
                        .setImage(IconBuilder.get(IconValue.LOGOUT_VARIANT))
                        .setTextPrimary(getString(R.string.logout_menu_title))
                        .setOnItemClickListener(this));

        //Init profile picture component
        Glide.with(this)
                .asBitmap()
                .load(firebaseUser.getPhotoUrl())
                .apply(new RequestOptions()
                        .signature(new ObjectKey(System.currentTimeMillis()))
                        .diskCacheStrategy(DiskCacheStrategy.ALL)
                )
                .into(new FirebaseProfilePictureListener(drawerProfile,this));
    }

    @Override
    public void onFragmentInteraction(Uri uri) {

    }

    @Override
    public void onClick(DrawerItem drawerItem, long l, int position) {
        if(drawerItem.getTextPrimary().equals(getString(R.string.Health_Data_Menu_Title))){
            //FragmentBuilder.changeFragment(DataUi_.builder().build());
        }
        if(drawerItem.getTextPrimary().equals(getString(R.string.sensor_catalogue_menu_title))){
            //FragmentBuilder.changeFragment(SensorUi_.builder().build());
            getSupportActionBar().setTitle(R.string.sensor_catalogue_menu_title);
        }
        if(drawerItem.getTextPrimary().equals(getString(R.string.settings_menu_title))){
            //SettingsFragment settingsFragment=new SettingsFragment_();
            //FragmentBuilder.changeFragment(SettingsFragment_.builder().build());
            getSupportActionBar().setTitle(FirebaseAuth.getInstance().getCurrentUser().getDisplayName()+getString(R.string.settings_personal_information_headings));
        }
        if (drawerItem.getTextPrimary().equals(getString(R.string.about_menu_title))){
            LibsSupportFragment aboutFragment=new LibsBuilder()
                    .withActivityStyle(ActivityStyle.LIGHT)
                    .withAboutAppName(getString(R.string.app_name))
                    .withAboutIconShown(Boolean.TRUE)
                    .withActivityTitle(getString(R.string.about_us_title))
                    .withAboutDescription(getString(R.string.about_us_description))
                    .withAboutSpecial1(getString(R.string.about_us_special1))
                    .withAboutSpecial1Description(getString(R.string.about_us_special1_description))
                    .withShowLoadingProgress(Boolean.TRUE)
                    .supportFragment();
            FragmentBuilder.changeFragment(aboutFragment);
            getSupportActionBar().setTitle(R.string.about_us_title);
        }
        if (drawerItem.getTextPrimary().equals(getString(R.string.logout_menu_title))){
            GoogleSignInClient googleSignInClient = GoogleSignIn.getClient(this, gso);
            FirebaseAuth.getInstance().signOut();
            googleSignInClient.signOut();
            googleSignInClient.revokeAccess();
            finish();
        }
        closeDrawer();
    }

    @Override
    public void onSharedPreferenceChanged(SharedPreferences sharedPreferences, String s) {
        if(s.equals(SettingsFragment.AGE_SETTINGS)){
            drawerProfile.setDescription(sharedPreferences.getString(s,"")+getString(R.string.profile_age_drawer));
            removeProfile(drawerProfile);
            addProfile(drawerProfile);
        }
        if(s.equals(SettingsFragment.BACKGROUND_JOB_SETTINGS)){
            if(sharedPreferences.getString(s,"On").equals("On")){
                SystemStatus.setBackgroundJobCancel(false);
                BackgroundRunnable.reRunBackgroundService();
            } else {
                SystemStatus.setBackgroundJobCancel(true);
            }
        }
    }

    @Override
    public void onClick(DrawerProfile drawerProfile, long l) {
        Notification.notifyUser(getString(R.string.profile_changing_guide));
    }
}
