@startuml

title __ICARE's Class Diagram__\n

  package sud_tanj.com.icare {
    class MainActivity {
        - firebaseUser : FirebaseUser
        ~ gso : GoogleSignInOptions
        - builder : Builder
        - drawerProfile : DrawerProfile
        # attachBaseContext()
        # onActivityResult()
        # onDestroy()
        + onBackPressed()
        # initActivity()
        # initNavigationDrawer()
        + onFragmentInteraction()
        + onClick()
        + onSharedPreferenceChanged()
        + onClick()
    }
  }
  

  package sud_tanj.com.icare {
    interface OnFragmentInteractionListener {
        {abstract} + onFragmentInteraction()
    }
  }
  

  MainActivity -up-|> OnProfileClickListener
  MainActivity -up-|> OnFragmentInteractionListener
  MainActivity -up-|> OnItemClickListener
  MainActivity -up-|> OnSharedPreferenceChangeListener
  MainActivity -up-|> DrawerActivity
  MainActivity o-- BackgroundDataReceiver : backgroundDataReceiver
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
